--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Destiny Child Mod Manager</string>
+    <string name="app_name">DC  Mod Manager</string>
 
     <string name="disclaimer_title">** ! DISCLAIMER ! **</string>
     <string name="disclaimer_message">This is really experimental, might and probably will cause problems.\nYou can test
